# corpus

./: LICENSE  README.md  pyproject.toml
docs/: conf.py
